adduser (3.87.0) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * experimental version
  * add patches from Stephen Gran:
    * allow additional groups to be used for a new user. (mh)
    Closes: #147518, #166718, #212452, #233894, #239006, #240707, #240855
    * Fix "adduser: adduser:" output of error messages. (mh)
    * Fix error messages like "foo ", gtx( ..., whch does not produce
      output at all. (mh)
  * Update French (fr) program translation.
    Thanks to Thomas Huriaux. (mh) Closes: #366885

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 12 May 2006 16:41:34 +0200

adduser (3.87) unstable; urgency=low

  [ Marc Haber ]
  * Update Italian (it) program and manpage translation.
    Thanks to Luca Monducci. (mh) Closes: #363100
  * Update French (fr) program translation. Thanks to Thomas Huriaux
    and Luc FROIDEFOND. (mh) Closes: #356130
  * Add Galician (gl) debconf translation.
    Thanks to Jacobo Tarrio. (mh) Closes: #361240
  * Fix mis-placed closing bracket in sub cleanup.
    Thanks to Ted Percival. (mh) Closes: #363182
  * Fix multiple issues in deluser man page.
    Thanks to J S Bygott. (mh) Closes: #362623
  * Correct wording in adduser man page.
    Thanks to Reuben Thomas. (mh) Closes: #364170

  [ Joerg Hoh ]
  * removed some unnecessary code
  * converted all calls of die() to dief(); Thanks to Stephan Gran
    <sgran@debian.org>

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Wed, 26 Apr 2006 14:00:15 +0000

adduser (3.86) unstable; urgency=low

  [ Marc Haber ]
  * Only check $! after calling symlink() if symlink() failed.
    Patch from Ubuntu, thanks to Colin Watson. (mh) Closes: #355708
  * Print error when failing, thanks to Ted Percival. (jh) Closes: #356162
  * Update French (fr) manpage translation.
    Thanks to Nicolas François. (mh) Closes: #356253
  * Update Czech (cs) program translation.
    Thanks to Miroslav Kure. (mh) Closes: #361413
  * Be more strict in user name checking.